为 Input 添加 checkbox 和 radio 模式 TextArea 暂时仍然有问题